--- a/index.html
+++ b/index.html
@@ -103,5 +103,5 @@
       </section>
     </div>
   </body>
-  <script src="script/script1.js"> </script>
+  <script src="script/script.js"> </script>
 </html>
